# LiteLLM

./: .env  .gitignore  .~lock.eval_result.csv#  OHOHO.ipynb  README.md  a.csv  embed_pdf.py  eval_result.csv  evaluation_results.csv  pyproject.toml  test.csv  test.ipynb
DB_TEST/: chroma.sqlite3
DB_TEST/0a6968f4-adb8-4de7-bf5f-64420c29d151/: index_metadata.pickle
DB_TEST_22.7/bc407274-7a29-43f0-876a-f8998132e2f8/: index_metadata.pickle
LiteLLM/Response/: __init__.py
LiteLLM/common/: config_loader.py
LiteLLM/lite/: LiteLLM.py  __init__.py
LiteLLM/scripts/: RAG_eval.py  auto_query.py  batch_query.py  dataset_eval.py  eval.py  evaluation.py  query.py  session.py
Phoenix/eval/: Answer_eval.py  RAG_eval.py  qa_eval.py
Phoenix/trace/: eval.py  tracing.py
configs/: dev.yaml  huggingface.yaml  staging.yaml
litellm_client/common/: __init__.py  config_loader.py
litellm_client/lite/: litellm_client.py
litellm_client/response/: __init__.py  message.py  response_input.py  response_output.py
litellm_client/scripts/: auto_query.py  evaluation.py  query.py  session.py
phoenix_tools/ci/: docker-compose.yml
phoenix_tools/eval/: answer_eval.py  evaluation_metrics.py  rag_eval.py
phoenix_tools/models/: openai_model.py
run_scripts/: auto_query.sh  batch_query.sh  evaluation.sh  query.sh  session.sh
run_scripts_WIN/: auto_query.bat  embed_pdf.bat  evaluation.bat  query.bat  session.bat
tools/: export_csv.py  factory.py  rag.py  retriever.py
